# nsrreadercore

./: CMakeLists.txt  README.txt  insrsettings.h  insrthumbnailer.h  nsrabstractdocument.cpp  nsrabstractdocument.h  nsrabstractrenderthread.cpp  nsrabstractrenderthread.h  nsrbookmarksstorage.cpp  nsrcharsetdetector.cpp  nsrcharsetdetector.h  nsrcroppads.cpp  nsrcroppads.h  nsrcroppadscache.cpp  nsrcroppadscache.h  nsrdjvudocument.cpp  nsrdjvudocument.h  nsrnormalizedpoint.cpp  nsrnormalizedpoint.h  nsrnormalizedrect.cpp  nsrnormalizedrect.h  nsrpagecropper.cpp  nsrpagecropper.h  nsrpagescache.cpp  nsrpagescache.h  nsrpopplerdocument.cpp  nsrpopplerdocument.h  nsrreadercore.cpp  nsrreadercore.h  nsrreadercore_blackberry.pri  nsrreadercore_global.h  nsrregiontext.cpp  nsrregiontext.h  nsrregulararea.h  nsrregulararearect.cpp  nsrregulararearect.h  nsrrenderedpage.cpp  nsrrenderedpage.h  nsrrenderinfo.cpp  nsrrenderinfo.h  (+30 more)
3dparty/djvu/: Arrays.cpp  ByteStream.cpp  CMakeLists.txt  DataPool.cpp  DjVmDir0.h  DjVuDocEditor.cpp  DjVuDocument.cpp  DjVuPalette.cpp  DjVuPort.cpp  DjVuToPS.cpp  GBitmap.cpp  GContainer.cpp  GContainer.h  GMapAreas.cpp  GMapAreas.h  GPixmap.cpp  GString.cpp  GThreads.h  GURL.cpp  JPEGDecoder.cpp  UnicodeByteStream.cpp  XMLParser.cpp  config-djvu.h.in  ddjvuapi.cpp
3dparty/jbigkit/: CMakeLists.txt  jbig.c  jbig85.c
3dparty/libjpeg-turbo/: CMakeLists.txt  config.h.in  jccolor.c  jchuff.c  jconfig.h.in  jdcolor.c  jdhuff.h  jdmerge.c  jdphuff.c  jinclude.h  jmorecfg.h  jpeglib.h
3dparty/libjpeg-turbo/config/blackberry/: config-jpeg.h
3dparty/libjpeg-turbo/simd/: jsimdcfg.inc.h
3dparty/libjpeg-turbo/win/: jconfig.h.in
3dparty/openjpeg/: CMakeLists.txt  j2k.c  jp2.c  opj_includes.h  tcd.c
3dparty/poppler/: CMakeLists.txt  config-pdf.h.in
3dparty/poppler/fofi/: FoFiTrueType.cc  FoFiType1.cc  FoFiType1C.cc
3dparty/poppler/goo/: GooString.cc  JpegWriter.cc  TiffWriter.cc  gfile.cc
3dparty/poppler/poppler/: Annot.cc  Array.cc  CMap.cc  CachedFile.cc  Catalog.cc  CharCodeToUnicode.cc  DCTStream.cc  DCTStream.h  Decrypt.cc  Decrypt.h  Dict.cc  Error.cc  FontInfo.cc  Form.cc  Function.cc  Gfx.cc  GfxFont.cc  GfxFont.h  GfxState.cc  GlobalParams.cc  GlobalParamsWin.cc  Hints.cc  JBIG2Stream.cc  JPEG2000Stream.cc  JPEG2000Stream.h  Lexer.cc  Link.cc  Object.cc  OutputDev.cc  PDFDoc.cc  PSOutputDev.cc  Page.cc  PageLabelInfo.cc  Parser.cc  PreScanOutputDev.cc  SecurityHandler.cc  SplashOutputDev.cc  Stream.cc  TextOutputDev.cc  TextOutputDev.h  (+5 more)
3dparty/poppler/splash/: Splash.cc  SplashBitmap.cc  SplashClip.cc  SplashFTFont.cc  SplashFTFontFile.cc  SplashFont.cc  SplashFontEngine.cc  SplashXPath.cc  SplashXPathScanner.cc
3dparty/tiff/: CMakeLists.txt  tif_config.h.in  tif_jbig.c  tif_jpeg.c  tif_ojpeg.c  tif_open.c  tif_unix.c  tif_write.c  tiffconf.h.in
3dparty/tiff/config/blackberry/: tif_config.h  tiffconf.h
3dparty/universalchardet/: CMakeLists.txt  CharDistribution.cpp  CharDistribution.h  JpCntx.cpp  JpCntx.h  nsBig5Prober.cpp  nsCharSetProber.cpp  nsCharSetProber.h  nsCodingStateMachine.h  nsEUCJPProber.cpp  nsEUCKRProber.cpp  nsEUCTWProber.cpp  nsGB2312Prober.cpp  nsLatin1Prober.cpp  nsPkgInt.h  nsSBCSGroupProber.cpp  nsSJISProber.cpp  nsUniversalDetector.cpp  nsUniversalDetector.h
cmake/: CheckCInline.cmake  CheckDIRSymbolExists.cmake  CheckNASMFlags.cmake  EnsureFileInclude.cmake  FindFontconfig.cmake  FindFreetype.cmake  FindIconv.cmake  TestLargeFiles.cmake
formats/: nsrdjvudocument.cpp  nsrdjvudocument.h  nsrpopplerdocument.cpp  nsrpopplerdocument.h  nsrtextdocument.cpp  nsrtextdocument.h  nsrtiffdocument.cpp  nsrtiffdocument.h
interfaces/: insrthumbnailer.h
text/: nsrnormalizedpoint.cpp  nsrnormalizedpoint.h  nsrnormalizedrect.h  nsrregiontext.cpp  nsrregiontext.h  nsrregulararea.cpp  nsrregulararea.h  nsrregulararearect.h  nsrsearchpoint.h  nsrtextbox.cpp  nsrtextbox.h  nsrtextentity.cpp  nsrtextselection.h  nsrtextxycut.h  nsrtinytextentity.cpp  nsrtinytextentity.h  nsrwordwithcharacters.h
